update book and fix create book
