# src/controllers/book.controller.js
@@ -71,8 +71,19 @@ exports.createBook = async (req, res) => {
     }
 
     const category = await Category.findOne({ categoryName });
-    const actor = await Category.findOne({ actorName });
+
     const bookMedia = await BookMedia.findOne({ origin });
+
+    const bookNameExits = await Book.findOne({ bookName });
+
+    let actor = await Actor.findOne({ actorName });
+    if (!actor) {
+      actor = new Actor({ actorName });
+      await actor.save();
+    }
+
+    if (bookNameExits)
+      return res.status(404).json({ message: "Book name alredy exits" });
 
     if (!category)
       return res.status(404).json({ message: "Category not found!" });
@@ -129,6 +140,63 @@ exports.getBookById = async (req, res) => {
     }
   } catch (error) {
     res.status(400).json({ message: error.message });
+  }
+};
+
+exports.updateBook = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const {
+      bookName,
+      description,
+      price,
+      categoryName,
+      actorName,
+      origin,
+      image,
+      soldBook,
+      quantity,
+    } = req.body;
+
+    const book = await Book.findById(id);
+    if (!book) return res.status(404).json({ message: "Book id not found!!!" });
+
+    const category = await Category.findOne({ categoryName });
+    const bookMedia = await BookMedia.findOne({ origin });
+    const bookNameExits = await Book.findOne({ bookName });
+
+    if (bookNameExits)
+      return res.status(404).json({ message: "Book name already exits!!!" });
+
+    if (!category)
+      return res.status(404).json({ message: "Category not found!" });
+    if (!bookMedia)
+      return res.status(404).json({ message: "Book media not found!" });
+
+    // Find or create actor
+    let actor = await Actor.findOne({ actorName });
+    if (!actor) {
+      actor = new Actor({ actorName });
+      await actor.save();
+    }
+
+    // Update book details
+    book.bookName = bookName || book.bookName;
+    book.description = description || book.description;
+    book.price = price || book.price;
+    book.image = image || book.image;
+    book.categoryID = category._id;
+    book.actorID = actor._id;
+    book.bookMediaID = bookMedia._id;
+    book.soldBook = soldBook || book.soldBook;
+    book.quantity = quantity || book.quantity;
+
+    await book.save();
+    res.status(200).json({ message: "Book updated successfully!", book });
+  } catch (error) {
+    res
+      .status(500)
+      .json({ message: "Internal server error", error: error.message });
   }
 };
 
